Update .env to new format

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-url_list="https://<dc>.api.mailchimp.com/3.0/lists/yourlistid"
-api_key="username:yourapikeyhere"
+list_id="your_list_id"
+api_key="your_api_key"
+server="server_pre_fix"
